# JammerNetz

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  IDEAS.md  README.md  appveyor.yml  arm64-linux.toolchain.cmake  arm64_ami_build_docs.md  azure-pipelines.yml  buildWindows.bat  build_mac_dmg.sh  conanfile.py  conanfile.txt  icon_maker.sh  jammernetz-arm64.pkr.hcl  log_analyze.py  run_test.sh
.github/workflows/: arm64_ami.yaml  arm64_server.yaml  macos.yaml  ubuntu.yaml  windows.yaml
Client/: CMakeLists.txt  Client.jucer  JammerNetzIcon.xcf  info.plist  setup_client.iss  setup_client.iss.in
Client/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Client/Resources/: JammerNetzIcon.icns  about.txt  digitalStagePC.icns
Client/Source/: ApplicationState.cpp  ApplicationState.h  AudioCallback.cpp  AudioCallback.h  AudioDeviceDiscovery.cpp  AudioDeviceDiscovery.h  AudioService.cpp  AudioService.h  BPMDisplay.cpp  BPMDisplay.h  ChannelController.cpp  ChannelController.h  ChannelControllerGroup.cpp  ChannelControllerGroup.h  Client.cpp  Client.h  ClientConfig.cpp  ClientConfig.h  DSConfig.h  Data.cpp  Data.h  DataReceiveThread.cpp  DataReceiveThread.h  DataStore.cpp  DataStore.h  DeviceSelector.cpp  DeviceSelector.h  IncludeFFMeters.h  JammerService.cpp  JammerService.h  JoinStageDialog.cpp  JoinStageDialog.h  LayoutConstants.h  Login.cpp  Login.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiClocker.cpp  MidiClocker.h  (+23 more)
Server/: CMakeLists.txt  JammerNetzServer.jucer
Server/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Server/Source/: AcceptThread.cpp  AcceptThread.h  Main.cpp  MixerThread.cpp  MixerThread.h  SendThread.cpp  SendThread.h  ServerLogger.cpp  ServerLogger.h  SharedServerTypes.h  version.cpp.in
Server/docker/buildmachine/: Dockerfile  buildBuildmachine.bat  makeLinux.bat  run_make.sh
aws/: cloud-init.sh  launch.py
cmake/: BinaryResources.cmake  HomegrownFlatC.cmake
common/: BuffersConfig.h  CMakeLists.txt  Encryption.cpp  Encryption.h  JammerCommonTests.cpp  JammerNetzAudioData.fbs  JammerNetzChannelSetup.fbs  JammerNetzClientInfoMessage.cpp  JammerNetzClientInfoMessage.h  JammerNetzControlMessage.fbs  JammerNetzPackage.cpp  JammerNetzPackage.h  JammerNetzPackages.capnp  JammerNetzPackages.fbs  JammerNetzSessionInfo.fbs  JuceHeader.h  PacketStreamQueue.cpp  PacketStreamQueue.h  Pool.h  Recorder.cpp  Recorder.h  RemoteControlDebugLog.cpp  RemoteControlDebugLog.h  RingOfAudioBuffers.h  RunningStats.cpp  RunningStats.h  ServerInfo.cpp  ServerInfo.h  Settings.cpp  Settings.h  StreamLogger.cpp  StreamLogger.h  XPlatformUtils.h  sentry-config.h.in
docs/: remote-volume-control-handover.md
issues/: 2019-11-03-branch-mathgl-experiment-disposition.debt.md  2019-11-26-branch-spectrogram-prototype-disposition.debt.md  2020-12-21-branch-createmidiclock-triage.debt.md  2021-03-24-branch-uuencodedkeys-disposition.debt.md  2021-04-03-branch-newffmeters-disposition.debt.md  2021-04-03-branch-tbbviaconan-disposition.debt.md  2021-10-05-branch-miniaudio-discovery-experiment-disposition.debt.md  2021-10-05-branch-miniaudio-experiment-disposition.debt.md  2024-10-18-branch-rustserver-prototype-disposition.debt.md  2025-03-29-branch-features-recordingview-triage.debt.md  2026-02-15-audioservice-message-thread-blocking-wait.bug.md  2026-02-15-branch-feature-remote-participant-volume-control-followup.debt.md  2026-02-15-client-datareceivethread-shared-state-races.bug.md  2026-02-15-client-identity-registry-lifecycle.debt.md  2026-02-15-client-port-bind-strategy.debt.md  2026-02-15-client-sender-silent-send-failure.bug.md  2026-02-15-control-traffic-observability-and-rate-budget.perf.md  2026-02-15-log-and-core-retention-policy.debt.md  2026-02-15-mixerthread-incoming-map-reset-race.bug.md  2026-02-15-packetstreamqueue-quality-divide-by-zero.bug.md  2026-02-15-remote-volume-e2e-regression-tests.test.md  2026-02-15-remote-volume-routing-drift-root-cause.bug.md  2026-02-15-server-crash-unaligned-tcache.bug.md  2026-02-15-server-shared-datagramsocket-cross-thread-access.bug.md  2026-02-15-threading-model-and-locking-map.doc.md  2026-02-15-unmerged-branch-audit.doc.md  2026-02-15-worker-thread-fatal-exit-handling.debt.md  PRIORITY_PLAN.md  README.md
lookAndFeel/: CMakeLists.txt  DSLevelMeterLAF.cpp  DSLevelMeterLAF.h  DSLookAndFeel.cpp  DSLookAndFeel.h
projucer/: projucer.jucer
rumix/: Cargo.toml
rumix/src/: JammerNetzAudioData_generated.rs  JammerNetzPackages_generated.rs  main.rs
test/: test_asio.cpp
